formatted final version

--- a/index.html
+++ b/index.html
@@ -180,13 +180,15 @@
           <div class="content-entry">
             <h3 class="content-entry__header">Skills</h3>
             <div class="content-entry__text-wrapper">
-              <p>Java Core, Java 8, Collections API, OOP, SOLID</p>
-              <p>SQL, MySQL, Hibernate, JDBC</p>
-              <p>Spring Core, Spring Web, Spring Security, Spring Data</p>
-              <p>Servlet, JSP, Tomcat, Git, Junit, Maven, log4j, Docker</p>
+              <p>
+                Java Core, Java 8, Collections API, OOP, SOLID, Servlet, JSP.
+              </p>
+              <p>SQL, MySQL, Hibernate, JDBC.</p>
+              <p>Spring Core, Spring Web, Spring Security, Spring Data.</p>
+              <p>Git, Tomcat, Junit, Maven, log4j, Docker.</p>
               <p>
                 JavaScript, HTML, CSS, SASS, npm, Gulp.JS, React, Redux,
-                Express.JS
+                Express.JS.
               </p>
             </div>
           </div>
@@ -245,7 +247,19 @@
           <div class="content-entry">
             <h3 class="content-entry__header">Language</h3>
             <div class="content-entry__text-wrapper">
-              <p>English: intermediate</p>
+              <p><span class="bold">English:</span> intermediate</p>
+            </div>
+          </div>
+
+          <div class="content-entry">
+            <h3 class="content-entry__header">Certificates</h3>
+            <div class="content-entry__text-wrapper">
+              <a
+                class="company-link company-link--course"
+                href="https://dan-it.com.ua/certificates/frontend/serhii-dudko/"
+                target="_blank"
+                >FrontEnd course certificate</a
+              >
             </div>
           </div>
 
@@ -260,23 +274,38 @@
           </div>
         </div>
 
+        <div class="vertical-divider"></div>
+        <div class="vertical-divider"></div>
+
         <div class="main-content-column main-content-column--right">
           <div class="content-entry">
             <h3 class="content-entry__header">Summary</h3>
             <div class="content-entry__text-wrapper">
-              <p>
+              <p class="summary-text">
                 Motivated and detail-oriented Java developer with a passion for
                 automating tasks and creating user-friendly products.
                 Enthusiastic about being part of a team that develops meaningful
                 and impactful solutions for people. Skilled in Java technologies
-                including Java Core, Java 8, OOP, SOLID principles, SQL,
-                Hibernate, Git, Spring Boot, Spring Core, Spring Web, Spring
-                Data and Spring Security. Experience in frontend development
-                with React, Redux, HTML, CSS, SASS, JavaScript, and Express.js.
-                Excitement for programming sparked by early experiences
-                automating calculations and routine tasks. Committed to
-                delivering high-quality code and continuously expanding
-                knowledge and skills in software development.
+                including <span class="bold">Java Core</span>,
+                <span class="bold">Java 8</span>, <span class="bold">OOP</span>,
+                <span class="bold">SOLID</span> principles,
+                <span class="bold">SQL</span>,
+                <span class="bold">Hibernate</span>,
+                <span class="bold">Git</span>,
+                <span class="bold">Spring Boot</span>,
+                <span class="bold">Spring Core</span>,
+                <span class="bold">Spring Web</span>,
+                <span class="bold">Spring Data</span> and
+                <span class="bold">Spring Security</span>. Experience in
+                frontend development with <span class="bold">React</span>,
+                <span class="bold">Redux</span>, <span class="bold">HTML</span>,
+                <span class="bold">CSS</span>, <span class="bold">SASS</span>,
+                <span class="bold">JavaScript</span>, and
+                <span class="bold">Express.js</span>. Excitement for programming
+                sparked by early experiences automating calculations and routine
+                tasks. Committed to delivering high-quality code and
+                continuously expanding knowledge and skills in software
+                development.
               </p>
             </div>
           </div>
@@ -291,20 +320,19 @@
 
               <div class="company-location-wrapper">
                 <p class="company">
-                  <span>at</span
-                  ><a
+                  <span>at</span>
+                  <a
                     class="company-link"
                     href="https://ua.energy/"
                     target="_blank"
-                  >
-                    NPC UKRENERGO</a
+                    >NPC UKRENERGO</a
                   >
                 </p>
 
                 <p class="company-location">Kyiv, Ukraine</p>
               </div>
 
-              <p>Key responsibilities:</p>
+              <p class="underline">Key responsibilities:</p>
               <ul class="ul-list">
                 <li>
                   Participation in the development of work projects (overhead
@@ -319,7 +347,7 @@
                   Performing calculations according to rules and regulations
                 </li>
               </ul>
-              <p>Achievements:</p>
+              <p class="underline">Achievements:</p>
               <p>
                 During my work, I automated many work processes. Such as
                 conducting standard calculations, collecting data from Autodesk
@@ -335,42 +363,54 @@
 
           <div class="content-entry">
             <h3 class="content-entry__header">Projects</h3>
-            <div class="content-entry__text-wrapper">
-              <a
-                href="https://github.com/nechupara/taxi-service"
-                target="_blank"
-                >Taxi service:</a
-              >
-              <p>
-                Web application to show simple CRUD operations, authentication,
-                and registration using MySQL and servlets, without any
-                frameworks.
-              </p>
-              <p>
-                <span>Technologies used:</span> Maven, Java 11, JDBC, Java
-                Servlet, JSP and CSS, Tomcat 9.0.50, MySQL 8.0
-              </p>
+            <div
+              class="content-entry__text-wrapper content-entry__text-wrapper--projects"
+            >
+              <div class="project-wrapper">
+                <a
+                  class="project-link"
+                  href="https://github.com/nechupara/taxi-service"
+                  target="_blank"
+                  >Taxi service:</a
+                >
+                <p>
+                  Web application to show simple CRUD operations,
+                  authentication, and registration using MySQL and servlets,
+                  without any frameworks.
+                </p>
+                <p>
+                  <span>Technologies used:</span> Maven, Java 11, JDBC, Java
+                  Servlet, JSP and CSS, Tomcat 9.0.50, MySQL 8.0
+                </p>
+              </div>
 
-              <a href="https://github.com/nechupara/cinema-app" target="_blank"
-                >Cinema app:</a
-              >
-              <p>
-                REST web application for ticket reservation. It implements the
-                main functions, such as:
-              </p>
-              <ul class="ul-list">
-                <li>displaying movies that are currently at the box office</li>
-                <li>
-                  shopping cart with the ability to add tickets to it and create
-                  an order based on the added tickets
-                </li>
-                <li>searching for available movie sessions by date</li>
-              </ul>
-              <p>
-                <span>Technologies used:</span> Maven, Java programming language
-                (JDK 11), JDBC, Spring, Spring-Web, Spring-Security, Hibernate,
-                Tomcat 9.0.50, MySQL 8.0
-              </p>
+              <div class="project-wrapper">
+                <a
+                  class="project-link"
+                  href="https://github.com/nechupara/cinema-app"
+                  target="_blank"
+                  >Cinema app:</a
+                >
+                <p>
+                  REST web application for ticket reservation. It implements the
+                  main functions, such as:
+                </p>
+                <ul class="ul-list">
+                  <li>
+                    displaying movies that are currently at the box office
+                  </li>
+                  <li>
+                    shopping cart with the ability to add tickets to it and
+                    create an order based on the added tickets
+                  </li>
+                  <li>searching for available movie sessions by date</li>
+                </ul>
+                <p>
+                  <span>Technologies used:</span> Maven, Java programming
+                  language (JDK 17), JDBC, Spring, Spring-Web, Spring-Security,
+                  Hibernate, Tomcat 9.0.50, MySQL 8.0
+                </p>
+              </div>
             </div>
           </div>
         </div>
